# Entropic-Substrate-Theory

./: README.md  metadata.yaml  precession_run_1759473505_summary.json
Matrix/: Cargo.toml  main.rs
Physics/: Main.lean  Physics.lean  Placeholder.lean  READMe.md  lakefile.toml
Physics/OperatorPython/: BSD-bsd_3.py  BSD-bsd_harness.py  BSD-bsd_test.py  BSD-bsd_to_lean_print.py  BSD-emit_bsd_ap_table.py  BSD-emit_bsd_ap_table_strict.py  (+4 more)
Prediction_Confirmation/: PredictionsTester.py  ReadMe.md  VoidAnisoTest.py  VoidDeepTests.py  placeholder.txt
QED_Experiments/: ghz_phase_variational.py  hardy_phase.py  molecule_fieldtest.py  molecules.csv  peres_mermin_phase.py
Test_&_Diagnostics/: Autotuner.py  CHSH.py  CSreduction.py  Corridor.py  Gravity.py  PPN.py  Quibits.py  Radius_Check.py  ReadMe.md  Ricciflow.py  Simulator3.py  Verification.py  copier.py  csch-and-swapping.py  darkmatterhalo.py  darkmatterhalosweep.py  darkmatterlensing.py  darkmatterproofgr.py  delayed-choicd-mzi.py  delayed-choice-mzi.py  delayed-quantum-eraser.py  dipole.py  galacticlensing.py  gradienthill.py  hill_isotropization_test.py  lightspeed.py  mach-zendher.py  max_and_minimum_planck_mass.py  redshift.py  timestepreduction.py  velocityflatradius.py
Turnkey_Replication/: Autotuner.py  CHSH.py  CSreduction.py  Gravity.py  PPN.py  PredictionsTester.py  RunAll.sh  Simulator3.py  Verification.py  VoidAnisoTest.py  VoidDeepTests.py  darkmatterhalo.py  darkmatterhalosweep.py  darkmatterlensing.py  delayed-choice-mzi.py  fitsloader.py  galacticlensing.py  redshift.py  timestepreduction.py
(+191 files in other folders)
