[package]
name = "hb_spectrum"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
rand = "0.8"
nalgebra = { version = "0.32", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"